--- a/src/app/features/profile/profile.component.scss
+++ b/src/app/features/profile/profile.component.scss
@@ -77,6 +77,12 @@ body {
                 }
             }
         }
+
+        #logout-button {
+            font-size: 1.5em;
+            font-family: "Cormorant Garamond", serif;
+            padding: 30px;
+        }
     }
 }
 
