added name input to call form

--- a/src/app/features/homepage/components/call-form/call-form.component.scss
+++ b/src/app/features/homepage/components/call-form/call-form.component.scss
@@ -8,6 +8,11 @@
     align-items: center;
     justify-content: center;
     padding: 50px;
+    
+    .form{
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .form-input {
