--- a/src/app/features/homepage/components/call-form/call-form.component.html
+++ b/src/app/features/homepage/components/call-form/call-form.component.html
@@ -1,17 +1,24 @@
 <div class="form-container">
     <h2 class="form-title">Request a call</h2>
-    <label class="formLabel">
-        Fill phone number:
-        <input class="form-input" type="" id="phoneNumber" class="form-input" minlength="8" maxlength="30"
-            placeholder="Enter your phone number" [(ngModel)]="phoneNumber">
-    </label>
+    <form class="form" [formGroup]="callForm">
+        <label class="formLabel">
+            Enter your name :
+            <input class="form-input" type="string" id="userName" minlength="2" maxlength="30"
+                placeholder="Enter your name" formControlName="userName">
+        </label>
+        <label class="formLabel">
+            Fill phone number:
+            <input class="form-input" type="string" id="phoneNumber" minlength="8" maxlength="30"
+                placeholder="Enter your phone number" formControlName="phoneNumber">
+        </label>
+    </form>
 
     <div class="text-container">
         <h2>Our specialist will contact you during the next 24 hours!</h2>
     </div>
 
     <div class="button-container">
-        <button class="save-button button" id="save" (click)="add(phoneNumber)">&#10003;</button>
+        <button class="save-button button" id="save" (click)="add()">&#10003;</button>
         <button class="cancel-button button" id="cancel" (click)="close()">&#10008;</button>
     </div>
 </div>
