--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,9 +1,11 @@
 <mat-toolbar>
   <a routerLink="/" class="page-link" mat-button color="primary">Application</a>
-  
+
   <div class="link-menu">
     <a routerLink="/trainings" class="page-link" mat-button color="primary"
       *ngIf="context !== 'trainings'">Trainings</a>
+    <a routerLink="/wheel" class="page-link" mat-button color="primary"
+      *ngIf="context !== 'wheel'">Emotional map</a>
   </div>
   <span class="example-spacer"></span>
 
