--- a/src/app/features/questionnaire/questionnaire.component.scss
+++ b/src/app/features/questionnaire/questionnaire.component.scss
@@ -2,7 +2,7 @@
   min-height: 100vh;
 
   background: rgb(255, 255, 255);
-  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 43%, rgba(0, 159, 255, 1) 100%);
+  background: var(--gradient);
 
   display: grid;
   justify-content: center;
