--- a/src/app/features/questionnaires/questionnaires.component.scss
+++ b/src/app/features/questionnaires/questionnaires.component.scss
@@ -7,7 +7,7 @@
   min-height: 100vh;
 
   background: rgb(255, 255, 255);
-  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 55%, rgba(0, 159, 255, 1) 100%);
+  background: var(--gradient);
 }
 
 .image {
