--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,16 @@
 
 @import '~normalize.css';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+:root {
+  --gradient: linear-gradient(180deg, rgba(255, 255, 255, 1) 25%, #c1e9fc 100%);
+}
