feat: connect backend

--- a/src/app/features/result/result.component.html
+++ b/src/app/features/result/result.component.html
@@ -13,12 +13,9 @@
     </mat-card>
 
     <mat-card>
-      <mat-card-title class="content-title">Your result</mat-card-title>
+      <mat-card-title class="content-title">Your result - {{ result.totalPoints }} points</mat-card-title>
 
-      <p class="result">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, optio. Inventore, ipsum
-        praesentium et earum nihil nisi culpa accusamus exercitationem repudiandae magni laboriosam necessitatibus
-        distinctio similique consectetur esse sequi velit!
-      </p>
+      <p class="result">{{ result.description }}</p>
 
       <mat-card-subtitle class="content-subtitle">Recommend to your personality</mat-card-subtitle>
 
