Fixed home page

--- a/src/app/features/homepage/components/specialist-card/specialist-card.component.html
+++ b/src/app/features/homepage/components/specialist-card/specialist-card.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <figure>
-        <img mat-card-avatar src={{image}}>
+        <img mat-card-avatar src='http://localhost:8088{{image}}'>
 
         <mat-card-title>{{name}}</mat-card-title>
         <mat-card-content>
