--- a/src/app/features/questionnaire/components/form/form.component.scss
+++ b/src/app/features/questionnaire/components/form/form.component.scss
@@ -53,3 +53,11 @@
 .mat-mdc-unelevated-button:not(:disabled) {
   background-color: #019FFF;
 }
+
+.simplified {
+  display: flex;
+
+  .answer {
+    width: 100%;
+  }
+}
