--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -18,6 +18,8 @@ $basic-color: #C1E9FC;
   a{
     font-family: "Cormorant Garamond", serif;
   }
+  // .profile-link mat-icon{
+  //   transform: scale(1.7);  }
 }
 
 .link-menu{
