--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -10,7 +10,7 @@
   <span class="example-spacer"></span>
 
   <ng-container *ngIf="signinService.isLoggedIn; else authButtons">
-    <a routerLink="/profile" mat-raised-button *ngIf="context !== 'profile'">Profile</a>
+    <a routerLink="/profile" class="profile-link" mat-mini-fab color="primary" aria-label="profile" *ngIf="context !== 'profile'"><mat-icon>account_circle</mat-icon></a>
   </ng-container>
 </mat-toolbar>
 
