--- a/src/app/features/profile/components/result-history/result-history.component.html
+++ b/src/app/features/profile/components/result-history/result-history.component.html
@@ -1,10 +1,10 @@
-<div *ngFor="let item of results " class="results-container">
+<!-- <div *ngFor="let result of resultHistory | async" class="results-container">
     <mat-card>
-        <mat-card-title>{{item.title}}</mat-card-title>
-        <mat-card-content> {{item.description}}    
+        <mat-card-title>{{result.title}}</mat-card-title>
+        <mat-card-content> {{result.description}}    
         </mat-card-content>
-        <span>{{item.createdDate}}</span>
+        <span>{{result.createdDate}}</span>
     </mat-card>
-</div>
+</div> -->
 
 <!-- *ngFor="let result of resultHistory " -->
