fixed result history

--- a/src/app/features/profile/components/result-history/result-history.component.html
+++ b/src/app/features/profile/components/result-history/result-history.component.html
@@ -1,10 +1,9 @@
-<!-- <div *ngFor="let result of resultHistory | async" class="results-container">
+<div *ngFor="let result of resultHistory | async" class="results-container">
     <mat-card>
         <mat-card-title>{{result.title}}</mat-card-title>
         <mat-card-content> {{result.description}}    
         </mat-card-content>
         <span>{{result.createdDate}}</span>
     </mat-card>
-</div> -->
+</div> 
 
-<!-- *ngFor="let result of resultHistory " -->
