--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -2,7 +2,7 @@
 <div class="container-body">
     <div class="profile-info-container">
         <div class="image-container">
-            <img src={{profileImage}} alt="">
+            <div class="img" *ngIf="profileImageStyle" [style.background-image]="profileImageStyle"></div>
         </div>
         <div class="user-info-container">
             <div class="user-info">
@@ -30,7 +30,7 @@
         <mat-tab-group>
             <mat-tab label="Setting" class="tab-menu">
                 <div class="tab-content">
-                    <app-avatar-panel class="panel" (removeAvatar)="addItem($event)"></app-avatar-panel>
+                    <app-avatar-panel class="panel" (removeAvatar)="removeItem()" [avatarName]="user.image"></app-avatar-panel>
                     <app-email-panel class="panel" [userEmail]="user.email"></app-email-panel>
                     <app-password-panel class="panel" [token]="token"></app-password-panel>
                     <app-additional-panel class="panel"></app-additional-panel>
