--- a/src/app/features/profile/profile.component.scss
+++ b/src/app/features/profile/profile.component.scss
@@ -41,10 +41,11 @@ body {
     justify-content: center;
     flex: 1;
 
-    img {
+    .img {
         width: 400px;
         height: 400px;
-        object-fit: cover;
+        background-size: cover;
+        background-position: center;
         margin-bottom: 50px;
         border-radius: 50%;
     }
